clusters/building-blocks/other/apps/better-bahn/app/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: better-bahn
  namespace: default
  labels:
    app.kubernetes.io/name: better-bahn
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: better-bahn
  template:
    metadata:
      labels:
        app.kubernetes.io/name: better-bahn
    spec:
      containers:
        - name: better-bahn
          image: ghcr.io/l2xu/betterbahn:latest
          imagePullPolicy: IfNotPresent
          ports:
            - name: http
              containerPort: 3000
              protocol: TCP
          resources:
            requests:
              cpu: 10m
              memory: 32Mi
            limits:
              cpu: 200m
              memory: 128Mi
          readinessProbe:
            httpGet:
              path: /
              port: http
            initialDelaySeconds: 5
            periodSeconds: 10
          livenessProbe:
            httpGet:
              path: /
              port: http
            initialDelaySeconds: 15
            periodSeconds: 20
          securityContext:
            readOnlyRootFilesystem: true
            runAsUser: 1000
            runAsGroup: 1000
            privileged: false
            allowPrivilegeEscalation: false
            capabilities:
              drop:
                - ALL
      securityContext:
        runAsNonRoot: true
        seccompProfile:
          type: RuntimeDefault
