clusters/building-blocks/other/apps/better-bahn/app/ingressroute.yaml
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: better-bahn
  namespace: default
  labels:
    app.kubernetes.io/name: better-bahn
spec:
  entryPoints:
    - websecure
    - web
  routes:
    - kind: Rule
      match: Host(`bahn.home.${DOMAIN_NAME}`)
      priority: 10
      middlewares:
        - name: pocket-id-oidc
          namespace: edge
      services:
        - kind: Service
          name: better-bahn
          namespace: default
          passHostHeader: true
          port: 3000
          scheme: http
